--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,21 @@
   <title>BoringChat</title>
 
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="lib/font-awesome.min.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+
+  <!-- Chat bubble -->
+  <link rel="stylesheet" media="all" href="lib/chat-bubble/component/styles/setup.css" />
+  <link rel="stylesheet" media="all" href="lib/chat-bubble/component/styles/says.css" />
+  <link rel="stylesheet" media="all" href="lib/chat-bubble/component/styles/reply.css" />
+  <link rel="stylesheet" media="all" href="lib/chat-bubble/component/styles/typing.css" />
+  <link rel="stylesheet" media="all" href="lib/chat-bubble/component/styles/input.css" />
+  
+  <style>
+      .bubble-container {
+        max-width: 870px;
+      }
+  </style>
 
 </head>
 <body>
@@ -84,21 +98,27 @@
       <div class="col">
 
         <div id="conversation">
+
+          <div id="chat" style="background-color: #FFFFFF"></div>
+
         </div>
 
         <div class="row" id="sendMessageDetails">
 
           <div class="col">
 
-            <input id="sendMessage" type="text" class="form-control" placeholder="Type your message here">
+            <input id="sendMessage" type="text" class="form-control input-wrap" placeholder="Type your message here">
 
           </div>
 
-          <div class="col-sm-2">
+          
+          <div class="col-sm-1">
 
-            <button id="sendMessageBut" type="button" class="btn btn-primary">Send</button>
+            <button id="sendMessageBut" type="button" class="btn btn-primary">
+              <i class="fa fa-send-o"></i>
+            </button>
 
-          </div>
+          </div> 
 
         </div> <!-- .row -->
 
@@ -108,15 +128,41 @@
 
   </div> <!-- .container -->
 
-  <script src="lib/jquery/jquery-3.1.1.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.js"></script>
-  <script type="text/javascript" src="js/chat.js"></script>
+  <script src="lib/jquery/jquery-3.1.1.min.js" type="text/javascript" ></script>
+  <script src="lib/bootstrap/js/bootstrap.js" type="text/javascript" ></script>
+  <script src="lib/chat-bubble/component/Bubbles.js" type="text/javascript" ></script>
+  <script src="js/chat.js" type="text/javascript"></script>
 
   <script type="text/javascript">
 
-    const getRole = function() {
-      return 'agent';
-    };
+    // initialize by constructing a named function...
+    var chatWindow = new Bubbles(
+      document.getElementById("chat"), // ...passing HTML container element...
+      "chatWindow", // ...and name of the function as a parameter
+      {
+        inputCallbackFn: function (chatObject) {
+
+          console.log( chatObject );
+
+        }
+      }
+    );
+
+// `.talk()` will get your bot to begin the conversation
+chatWindow.talk(
+  // pass your JSON/JavaScript object to `.talk()` function where
+  // you define how the conversation between the bot and user will go
+  {
+    // "ice" (as in "breaking the ice") is a required conversation object
+    // that maps the first thing the bot will say to the user
+    ice: {
+      // "says" defines an array of sequential bubbles
+      // that the bot will produce
+      says: ["Hey!"]
+    }, // end required "ice" conversation object
+
+  } // end conversation object
+)
 
   </script>
 
