--- a/public/index.html
+++ b/public/index.html
@@ -155,9 +155,10 @@
 
   </div> <!-- .container -->
 
-  <script src="lib/jquery/jquery-3.1.1.min.js" type="text/javascript" ></script>
-  <script src="lib/bootstrap/js/bootstrap.js" type="text/javascript" ></script>
-  <script src="lib/chat-bubble/component/Bubbles.js" type="text/javascript" ></script>
+  <script src="lib/jquery/jquery-3.1.1.min.js" type="text/javascript"></script>
+  <script src="lib/bootstrap/js/bootstrap.js" type="text/javascript"></script>
+  <script src="lib/chat-bubble/component/Bubbles.js" type="text/javascript"></script>
+  <script src="lib/socket.io/socket.io.js" type="text/javascript"></script>
   <script src="js/chat.js" type="text/javascript"></script>
 
   <script type="text/javascript">
