Added the 'room' feature, Also when a new user connects and joins a room will appear on the left panel

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,16 @@
 
           </div>
 
+          <div class="input-group mb-3">
+            
+            <div class="input-group-prepend">
+                <span class="input-group-text" id="room-label">#</span>
+            </div>
+            <input required="true" id="ws-room" type="text" class="form-control" placeholder="room" aria-label="room-placeholder" aria-describedby="room-label">
+
+
+          </div>
+
         
 
 
